--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -1,8 +1,3 @@
 settings:
-  remove_quotes_in_frontmatter:
-   = "true"
-pretranslate:
-  paths:
-  - source: .
-    include:
-      - " autodiff.ipynb"
+   advise_cla_signing:
+  - "true"
